--- a/api/package.json
+++ b/api/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^7.3.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
