--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.14.2",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
